--- a/neovim-git/PKGBUILD
+++ b/neovim-git/PKGBUILD
@@ -10,18 +10,14 @@ arch=('x86_64')
 url='https://neovim.io'
 backup=('etc/xdg/nvim/sysinit.vim')
 license=('custom:neovim')
-depends=('libluv' 'libtermkey' 'libuv' 'luajit' 'libvterm' 'msgpack-c' 'unibilium' 'libutf8proc')
+depends=('libtermkey' 'libuv' 'msgpack-c' 'unibilium' 'libvterm' 'luajit' 'libluv')
 makedepends=('cmake' 'ninja' 'git' 'gperf' 'lua51-mpack' 'lua51-lpeg')
-optdepends=('python2-neovim: for Python 2 plugin support (see :help provider-python)'
-            'python-neovim: for Python 3 plugin support (see :help provider-python)'
-            'ruby-neovim: for Ruby plugin support (see :help provider-ruby)'
-            'xclip: for clipboard support (or xsel) (see :help provider-clipboard)'
+optdepends=('xclip: for clipboard support (or xsel) (see :help provider-clipboard)'
             'xsel: for clipboard support (or xclip) (see :help provider-clipboard)')
 source=("${pkgname}::git+https://github.com/neovim/neovim.git")
 sha256sums=('SKIP')
-provides=("neovim=${pkgver}")
+provides=("neovim=${pkgver}" 'vim-plugin-runtime')
 conflicts=('neovim')
-install=neovim-git.install
 
 pkgver() {
   cd "${pkgname}"
@@ -29,20 +25,20 @@ pkgver() {
 }
 
 build() {
-  cd "${pkgname}"
-  make CMAKE_BUILD_TYPE=Release \
-    CMAKE_INSTALL_PREFIX=/usr \
-    DEPS_CMAKE_FLAGS="-DUSE_BUNDLED=OFF -DUSE_BUNDLED_TS_PARSERS=ON"
+  cmake -Hneovim-git -Bbuild -GNinja \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr
+  cmake --build build
 }
 
 check() {
-  cd "${srcdir}/${pkgname}/build"
+  cd "${srcdir}/build"
   ./bin/nvim --version
   ./bin/nvim --headless -u NONE -i NONE -c ':quit'
 }
 
 package() {
-  cd "${srcdir}/${pkgname}/build"
+  cd "${srcdir}/build"
   DESTDIR="${pkgdir}" cmake --build . --target install
 
   cd "${srcdir}/neovim-git"
