--- a/neovim-git/PKGBUILD
+++ b/neovim-git/PKGBUILD
@@ -3,17 +3,18 @@
 # Contributor: Florian Hahn <flo@fhahn.com>
 
 pkgname=neovim-git
-pkgver=0.4.0.r865.g120a4c8e2
+pkgver=0.4.0.r1426.g4ab7bbf3ea
 pkgrel=1
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs.'
 arch=('x86_64')
 url='https://neovim.io'
 backup=('etc/xdg/nvim/sysinit.vim')
 license=('custom:neovim')
-depends=('libtermkey' 'libuv' 'msgpack-c' 'unibilium' 'libvterm' 'luajit' 'libluv')
+depends=('libtermkey' 'libuv' 'msgpack-c' 'unibilium' 'libvterm' 'luajit' 'libluv' 'tree-sitter')
 makedepends=('cmake' 'ninja' 'git' 'gperf' 'lua51-mpack' 'lua51-lpeg')
 optdepends=('xclip: for clipboard support (or xsel) (see :help provider-clipboard)'
-            'xsel: for clipboard support (or xclip) (see :help provider-clipboard)')
+            'xsel: for clipboard support (or xclip) (see :help provider-clipboard)'
+            'wl-clipboard: for clipboard support on wayland (see :help clipboard)')
 source=("${pkgname}::git+https://github.com/neovim/neovim.git")
 sha256sums=('SKIP')
 provides=("neovim=${pkgver}" 'vim-plugin-runtime')
