--- a/neovim-git/PKGBUILD
+++ b/neovim-git/PKGBUILD
@@ -3,22 +3,26 @@
 # Contributor: Florian Hahn <flo@fhahn.com>
 
 pkgname=neovim-git
-pkgver=0.4.0.r1426.g4ab7bbf3ea
+pkgver=0.4.0.r2116.geee0668818
 pkgrel=1
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs.'
-arch=('x86_64')
+arch=('i686' 'x86_64' 'armv7h' 'armv6h' 'aarch64')
 url='https://neovim.io'
 backup=('etc/xdg/nvim/sysinit.vim')
 license=('custom:neovim')
-depends=('libtermkey' 'libuv' 'msgpack-c' 'unibilium' 'libvterm' 'luajit' 'libluv' 'tree-sitter')
-makedepends=('cmake' 'ninja' 'git' 'gperf' 'lua51-mpack' 'lua51-lpeg')
-optdepends=('xclip: for clipboard support (or xsel) (see :help provider-clipboard)'
+depends=('libluv' 'libtermkey' 'libutf8proc' 'libuv' 'libvterm>=0.1.git5' 'luajit' 'msgpack-c' 'unibilium' 'tree-sitter')
+makedepends=('cmake' 'git' 'gperf' 'lua51-mpack' 'lua51-lpeg')
+optdepends=('python2-neovim: for Python 2 plugin support (see :help provider-python)'
+            'python-neovim: for Python 3 plugin support (see :help provider-python)'
+            'ruby-neovim: for Ruby plugin support (see :help provider-ruby)'
+            'xclip: for clipboard support (or xsel) (see :help provider-clipboard)'
             'xsel: for clipboard support (or xclip) (see :help provider-clipboard)'
             'wl-clipboard: for clipboard support on wayland (see :help clipboard)')
 source=("${pkgname}::git+https://github.com/neovim/neovim.git")
 sha256sums=('SKIP')
-provides=("neovim=${pkgver}" 'vim-plugin-runtime')
+provides=("neovim=${pkgver}")
 conflicts=('neovim')
+install=neovim-git.install
 
 pkgver() {
   cd "${pkgname}"
@@ -26,7 +30,7 @@ pkgver() {
 }
 
 build() {
-  cmake -Hneovim-git -Bbuild -GNinja \
+  cmake -S"${pkgname}" -Bbuild -GNinja \
         -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX=/usr
   cmake --build build
